--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   rxdart: ^0.24.0
   http: ^0.12.2
   flutter_session: ^0.1.1
+  provider:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,7 +35,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: any
   shared_preferences: any
 
 # For information on the generic Dart part of this file, see the
