--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,14 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  intl: 0.15.7
   flutter:
     sdk: flutter
   rxdart: ^0.24.0
   http: ^0.12.2
   flutter_session: ^0.1.1
   provider:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
