--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   flutter_session: ^0.1.1
   provider:
   fluttertoast: ^8.0.8
-  gson: ^0.1.4
+  path_provider:
+  path:
+  image_picker:
+  http_parser:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
