--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:/Users/Usuario/AppData/Local/Android/Sdk
+sdk.dir=C:\\Users\\Usuario\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\src\\flutter
